fix alignment of instagram container

--- a/style.css
+++ b/style.css
@@ -311,16 +311,16 @@ html {
 .intro {
     margin: 15% 0;
 }
-.intro .intro-icon {
+.intro .intro__icon {
     position: relative;
     text-align: center;
 }
-.intro .intro-icon img {
+.intro .intro__icon img {
     display: inline-block;
     width: 10%;
     height: auto;
 }
-.intro .intro-icon::before {
+.intro .intro__icon::before {
     content: "";
     display: block;
     width: 40%;
@@ -332,7 +332,7 @@ html {
     top: 10px;
     left: 0;
 }
-.intro .intro-icon::after {
+.intro .intro__icon::after {
     content: "";
     display: block;
     width: 40%;
@@ -344,20 +344,21 @@ html {
     top: 10px;
     right: 0;
 }
-.intro .intro-flex {
+.intro .intro__flex {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
-    margin: 50px 0;
+    align-content: flex-start;
+    margin: 50px 0 20px;
 }
-.intro .intro-flex img {
+.intro .intro__flex > img {
     width: 20%;
     height: 100px;
     object-fit: cover;
     object-position: 0 20%;
     border: none;
 }
-.intro .intro-flex p {
+.intro .intro__flex p {
     display: inline-block;
     width: 70%;
     font-size: 0.8rem;
@@ -365,12 +366,34 @@ html {
     line-height: 1.5;
     margin-left: 5%;
 }
+.intro .intro__flex-insta {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 2% 0 0 5%;
+}
+.intro .intro__flex-insta a {
+    width: 5%;
+}
+.intro .intro__flex-insta img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+.intro .intro__flex-insta p {
+    display: inline-block;
+    font-size: 0.8rem;
+    font-style: italic;
+    font-weight: lighter;
+    margin-left: 2%;
+}
+
 
 @media (min-width: 1000px) {
-    .intro .intro-icon img {
+    .intro .intro__icon img {
         width: 5%;
     }
-    .intro .intro-flex img {
+    .intro .intro__flex > img {
         width: 10%;
     }
 }
